tests/snapshots/test_runner__tests__compiler__typecheck__top_level_expression_1__top_level_expression_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo (): Int = 123

entry
  foo ()
  // Error: expected () but got Int
  // This is because expressions tha are not assigned to a variable must have unit type

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/top_level_expression_1/top_level_expression_1.kk:4:3
  │
4 │   foo ()
  │   ^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - ()          | + Int       |
    +---------------+-------------+
